--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,15 +1,18 @@
 # Welcome to Moondream Documentation
 
-Welcome to the official documentation for Moondream, a powerful vision-language model that enables you to analyze images, generate captions, and answer questions about visual content.
+Moondream is an open-source vision-language model optimized for CPU and edge devices, available in 2B and 0.5B parameter versions.
 
 ## What is Moondream?
 
-Moondream is a lightweight yet powerful vision-language model that allows you to:
-- 🖼️ Generate detailed image descriptions
-- 💬 Answer questions about images
-- 🚀 Run locally for privacy
-- 🎯 Support for CUDA acceleration
-- 🔄 Stream responses for longer queries
+Core capabilities:
+- 🖼️ Image Captioning
+- 💬 Visual Question Answering 
+- 🎯 Object Detection
+
+Key features:
+- 🚀 Open-source SOTA model for all devices
+- 💻 Fast inference on laptops without GPU
+- 🔒 Local execution for privacy
 
 ## Quick Start
 
