--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -10,79 +10,48 @@ Learn how to get started with Moondream, an open-source vision-language model op
 
 <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-8">
   <div className="flex flex-col p-6 bg-white rounded-lg shadow hover:shadow-md transition-shadow">
-    <div className="text-2xl mb-2">▶️</div>
-    <h3 className="text-xl font-semibold mb-2">Quick Start</h3>
-    <p className="text-gray-600 mb-4">Get up and running with Moondream in minutes.</p>
-    <a href="/moondream-docs/quick-start" className="text-blue-500 hover:text-blue-600 mt-auto">Learn more →</a>
+    <div className="text-2xl mb-2">⬇️</div>
+    <h3 className="text-xl font-semibold mb-2">Download Models</h3>
+    <p className="text-gray-600 mb-4">Get the latest Moondream model weights.</p>
+    <a href="/model-downloads" className="text-blue-500 hover:text-blue-600 mt-auto">Learn more →</a>
   </div>
 
   <div className="flex flex-col p-6 bg-white rounded-lg shadow hover:shadow-md transition-shadow">
     <div className="text-2xl mb-2">🔍</div>
     <h3 className="text-xl font-semibold mb-2">Capabilities</h3>
     <p className="text-gray-600 mb-4">Explore image captioning, visual Q&A, and more.</p>
-    <a href="/moondream-docs/capabilities/image-captioning" className="text-blue-500 hover:text-blue-600 mt-auto">Learn more →</a>
+    <a href="/local-deployment/getting-started" className="text-blue-500 hover:text-blue-600 mt-auto">Learn more →</a>
   </div>
 
   <div className="flex flex-col p-6 bg-white rounded-lg shadow hover:shadow-md transition-shadow">
     <div className="text-2xl mb-2">💻</div>
-    <h3 className="text-xl font-semibold mb-2">Examples</h3>
+    <h3 className="text-xl font-semibold mb-2">Cookbook</h3>
     <p className="text-gray-600 mb-4">See code samples and implementations.</p>
-    <a href="/moondream-docs/examples/jupyter-notebook" className="text-blue-500 hover:text-blue-600 mt-auto">Learn more →</a>
+    <a href="/cookbook/basic-usage" className="text-blue-500 hover:text-blue-600 mt-auto">Learn more →</a>
   </div>
 
   <div className="flex flex-col p-6 bg-white rounded-lg shadow hover:shadow-md transition-shadow">
-    <div className="text-2xl mb-2">⚡</div>
-    <h3 className="text-xl font-semibold mb-2">Advanced Usage</h3>
-    <p className="text-gray-600 mb-4">Configure GPU acceleration, optimize performance and customize settings.</p>
-    <a href="/moondream-docs/advanced/configuration" className="text-blue-500 hover:text-blue-600 mt-auto">Learn more →</a>
+    <div className="text-2xl mb-2">☁️</div>
+    <h3 className="text-xl font-semibold mb-2">Moondream Cloud</h3>
+    <p className="text-gray-600 mb-4">Access Moondream via REST API from any platform.</p>
+    <a href="/cloud/getting-started" className="text-blue-500 hover:text-blue-600 mt-auto">Learn more →</a>
   </div>
 
   <div className="flex flex-col p-6 bg-white rounded-lg shadow hover:shadow-md transition-shadow">
     <div className="text-2xl mb-2">📱</div>
     <h3 className="text-xl font-semibold mb-2">Technical Specifications</h3>
     <p className="text-gray-600 mb-4">Explore model variants and technical details.</p>
-    <a href="/moondream-docs/technical-specifications" className="text-blue-500 hover:text-blue-600 mt-auto">Learn more →</a>
+    <a href="/technical-specifications" className="text-blue-500 hover:text-blue-600 mt-auto">Learn more →</a>
   </div>
 
   <div className="flex flex-col p-6 bg-white rounded-lg shadow hover:shadow-md transition-shadow">
     <div className="text-2xl mb-2">🤗</div>
     <h3 className="text-xl font-semibold mb-2">Transformers</h3>
     <p className="text-gray-600 mb-4">Use Moondream with Hugging Face Transformers.</p>
-    <a href="/moondream-docs/transformers" className="text-blue-500 hover:text-blue-600 mt-auto">Learn more →</a>
+    <a href="/advanced/transformers" className="text-blue-500 hover:text-blue-600 mt-auto">Learn more →</a>
   </div>
 </div>
 
-## Model Overview
-
-### Available Models
-
-<div className="overflow-x-auto">
-  <div className="grid grid-cols-1 gap-4 mt-4">
-    <div className="bg-white p-4 rounded-lg shadow">
-      <h4 className="font-semibold text-lg mb-2">Moondream on Hugging Face Hub</h4>
-      <div className="space-y-2">
-        <div className="flex text-sm">
-          <span className="text-gray-600">Model ID: <span className="font-mono">vikhyatk/moondream2</span></span>
-        </div>
-        <div className="flex flex-col gap-1">
-          <div className="text-gray-600 text-sm">Available Variants:</div>
-          <div className="pl-4 space-y-1 font-mono text-sm">
-            <div>• Base Model (2B parameters)</div>
-            <div>• Quantized Models (INT8, INT4)</div>
-            <div>• Small Model (0.5B parameters)</div>
-          </div>
-        </div>
-        <div className="flex flex-col gap-1">
-          <div className="text-gray-600 text-sm">Integration Features:</div>
-          <div className="pl-4 space-y-1 font-mono text-sm">
-            <div>• Full Transformers pipeline support</div>
-            <div>• Custom model configurations</div>
-            <div>• Optimized for research & production</div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-For detailed information about using Moondream with Transformers, including advanced configurations and deployment options, see our [Transformers Integration Guide](/moondream-docs/transformers).
+<Callout>
+  Run into any issues getting setup? Join our [Discord](https://discord.com/invite/tRUdpjDQfH) and share your experience or get help!
+</Callout>
